test/pass/paren_type_erase.j
class A {
  Void main() {
    return 5 + (false);
    return (5) || (false);
    return (5) + ("asd");
  }
}
