test/fail/parsing_empty_quote_string.j
class A {
  Void main() {
    return "";
  }
}
